# dataservice-publisher

./: .env  .flake8  .gitignore  Dockerfile  README.md  TODO.md  dataservice-catalog.yaml  dataservice-publisher.yaml  db.json  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-staging.yaml  run-tests.yml
dataservice_publisher/: __init__.py  app.py  gunicorn_config.py
dataservice_publisher/exceptions/: __init__.py  exceptions.py
dataservice_publisher/resources/: __init__.py  catalogs.py  login.py  ping.py  ready.py
dataservice_publisher/service/: catalog_service.py
dataservice_publisher/utils/: __init__.py  content_negotiation.py
dataservicecatalog/: __init__.py  api-catalog_1.json  catalogs.py  dataservices.py  db.py  gunicorn_config.py  loadDB.py  mappers.py
dataservicecatalog/lib/: mappers.py
dataservicecatalog/model/: api-catalog_1.json  db.py  loadDB.py  repository.py
docs/: conf.py
src/: app.py
src/dataserviceDB/: api-catalog.json  api-catalog_1.json
src/dataservice_publisher/: __init__.py  catalogs.py  dataservices.py  gunicorn_config.py
src/dataservice_publisher/exceptions/: exceptions.py
src/dataservice_publisher/mapper/: mappers.py
src/dataservice_publisher/model/: __init__.py  api-catalog_1.json  db.py  loadDB.py  repository.py
src/dataservice_publisher/resources/: catalogs.py  login.py  ping.py  ready.py
src/dataservice_publisher/service/: __init__.py  catalog_service.py
test/: test_api.py  test_dataservice-catalog.ttl
tests/: catalog_1.ttl  catalog_2.ttl  conftest.py  dataservice_1.ttl  dataservice_2.ttl  docker-compose.yml  test_api.py  test_catalogs.py  test_dataservices.py
tests/contract/: __init__.py  test_api.py  test_catalogs.py  test_login.py
tests/files/: catalog_1.json  catalog_1.ttl  catalog_2.ttl  dataservice_1.ttl  dataservice_2.ttl  petstore.yaml
tests/integration/: __init__.py  test_catalogs.py  test_factory.py  test_login.py  test_ping.py  test_ready.py
tests/unit/: __init__.py  test_catalog_service.py  test_catalogs.py  test_content_negotiation.py  test_factory.py  test_login.py  test_ping.py  test_ready.py
