[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A service for publishing dataservices in a datacatalog"
homepage = "https://github.com/Informasjonsforvaltning/dataservice-publisher"
license = "Apache-2.0"
name = "dataservice_publisher"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/dataservice-publisher"
version = "0.1.0"

[tool.poetry.dependencies]
PyJWT = "^2.6.0"
PyYAML = "^5.4.1"
SPARQLWrapper = "^2.0.0"
aiohttp = "^3.8.4"
aiohttp-middlewares = "^2.2.0"
content-negotiation = "^1.1.1"
gunicorn = "^20.1.0"
jsonpickle = "^3.0.1"
multidict = "^6.0.4"
oastodcat = "^2.0.1"
python = ">=3.8.1,<3.11"
python-dotenv = "^0.21.1"
python-json-logger = "*"
rdflib = "^6.3.2"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.14.0"
Sphinx = "^6.1.3"
aiohttp-devtools = "^1.0.post0"
aioresponses = "^0.7.4"
black = "^23.3.0"
codecov = "^2.1.13"
coverage = "^7.2.2"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-assertive = "^2.1.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.7.10"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.1"
mypy = "^1.1.1"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"
pep8-naming = "^0.13.3"
pytest = "^7.2.2"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-docker = "^1.0.1"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.10.0"
pytype = "^2023.6.16"
safety = "^2.3.5"
sphinx-autodoc-typehints = "^1.22"
types-PyYAML = "^6.0.12.8"
types-requests = "^2.28.11.17"
xdoctest = "^1.1.1"

[tool.coverage.paths]
source = ["dataservice_publisher", "*/site-packages"]

[tool.coverage.run]
omit = ["*gunicorn_config.py", "*content_negotiation.py"]
source = ["dataservice_publisher"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "oastodcat.*",
  "datacatalogtordf.*",
  "pytest_mock.*",
  "pythonjsonlogger.*",
  "gunicorn.*",
  "aioresponses.*",
  "content_negotiation.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]

[build-system]
branch = false
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
