[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A service for publishing dataservices in a datacatalog"
homepage = "https://github.com/Informasjonsforvaltning/dataservice-publisher"
license = "Apache-2.0"
name = "dataservice_publisher"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/dataservice-publisher"
version = "0.1.0"

[tool.poetry.dependencies]
PyJWT = "^2.8.0"
PyYAML = "^6.0.1"
SPARQLWrapper = "^2.0.0"
aiohttp = "^3.9.1"
aiohttp-middlewares = "^2.2.1"
content-negotiation = "^1.1.2"
gunicorn = "^21.2.0"
jsonpickle = "^3.0.2"
multidict = "^6.0.4"
oastodcat = "^2.0.2"
python = ">=3.10,<3.11"
python-dotenv = "^1.0.1"
python-json-logger = "*"
rdflib = "^6.3.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.17.2"
Sphinx = "^7.2.6"
aiohttp-devtools = "^1.1.2"
aioresponses = "^0.7.6"
black = "^24.1.1"
codecov = "^2.1.13"
coverage = "^7.4.0"
darglint = "^1.8.1"
flake8 = "^7.0.0"
flake8-annotations = "^3.0.1"
flake8-assertive = "^2.1.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.1.17"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
mypy = "^1.8.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
pep8-naming = "^0.13.3"
pytest = "^7.4.4"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-docker = "^3.1.1"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.12.0"
safety = "^3.0.1"
sphinx-autodoc-typehints = "^1.25.2"
types-PyYAML = "^6.0.12.12"
types-requests = "^2.31.0.20240106"
xdoctest = "^1.1.2"

[tool.coverage.paths]
source = ["dataservice_publisher", "*/site-packages"]

[tool.coverage.run]
omit = ["*gunicorn_config.py", "*content_negotiation.py"]
source = ["dataservice_publisher"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "oastodcat.*",
  "datacatalogtordf.*",
  "pytest_mock.*",
  "pythonjsonlogger.*",
  "gunicorn.*",
  "aioresponses.*",
  "content_negotiation.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]

[build-system]
branch = false
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
